# Replicas

./: .gitmodules
LearnOpenGL/: CMakeLists.txt  README.md  format.sh
LearnOpenGL/lib/: CMakeLists.txt
LearnOpenGL/lib/include/LGL/: init.hpp
LearnOpenGL/lib/include/LGL/base_components/: EBO.hpp  VAO.hpp  VBO.hpp  shader.hpp
LearnOpenGL/lib/src/: EBO.cpp  VAO.cpp  VBO.cpp  init.cpp  shader.cpp
LearnOpenGL/src/: main.cpp
MudOS/: .gitignore
MudOS/day2/: Makefile  helloos.S
MudOS/day3/: Makefile  bootpack.c  mud.ld  mud.s
MudOS/day4/: Makefile  bootpack.s  func.s  ipl.s  mud.s
MudOS/day5/: .gdbinit  Makefile  bootpack.c  mud.s
SimpleEditor/: README.md
